[tool.poetry]
name = "deap"
version = "0.1.0"
description = "Data Exploration & Analysis Package"
authors = ["Matthew Lyn <lynma01 at gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.17.5"
duckdb = "^0.7.1"
ipykernel = "^6.22.0"
xlsx2csv = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
